110-prowler/manifests/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowler-worker
  namespace: prowler
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prowler-worker
  template:
    metadata:
      labels:
        app: prowler-worker
    spec:
      terminationGracePeriodSeconds: 120
      containers:
        - name: worker
          image: prowlercloud/prowler-api:stable
          command: ["/home/prowler/docker-entrypoint.sh", "worker"]
          resources:
            requests:
              cpu: 200m
              memory: 1Gi
            limits:
              cpu: 1000m
              memory: 3Gi
          volumeMounts:
            - name: output
              mountPath: /tmp/prowler_api_output
      volumes:
        - name: output
          emptyDir: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowler-worker-beat
  namespace: prowler
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prowler-worker-beat
  template:
    metadata:
      labels:
        app: prowler-worker-beat
    spec:
      terminationGracePeriodSeconds: 120
      containers:
        - name: worker-beat
          image: prowlercloud/prowler-api:stable
          command: ["/home/prowler/docker-entrypoint.sh", "beat"]
          resources:
            requests:
              cpu: 100m
              memory: 512Mi
            limits:
              cpu: 500m
              memory: 1Gi
